--- a/SERVER/.env
+++ b/SERVER/.env
@@ -1,3 +1,4 @@
 Mango_URI=mongodb://127.0.0.1:27017/client
+MANGO_CLOUD_URI=mongodb+srv://gokulnr02:qMAxfL1aQsp8y1q2@cluster0.b8rsj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5002
 JWT_SECRET_KEY=24
