--- a/CLIENT/chat/package.json
+++ b/CLIENT/chat/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "emoji-picker-react": "^4.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-input-emoji": "^5.9.0",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
