--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.1",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1",
     "validator": "^13.12.0"
